# PSMVA

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  run.ps1
diary/notes/: description.md  functional.md
diary/notes/design/: approach.md  design.md
diary/tasks/: WEEK 1. 16.03 - 22.03.md  WEEK 2. 23.03 - 29.03.md  WEEK 3. 30.03 - 05.04.md
libs/engine/: engine.h
libs/engine/global_inputs/: global_inputs.cpp  global_inputs.h
libs/engine/lang_state/: lang_state.h
libs/engine/platform/: platform.h
libs/engine/special/absolute_by_relative/: absolute_by_relative.cpp  absolute_by_relative.h  platform_routing.h  platform_routing_lin.cpp  platform_routing_win.cpp
libs/engine/special/opencv_to_sdl/: opencv_to_sdl.h
libs/engine/state_machine/: state_machine.h
libs/program_gui/: gui_description.md
libs/program_gui/basic_elements/GUI_functions/drawing/: figures_drawing.cpp  figures_drawing.h
libs/program_gui/basic_elements/GUI_functions/translators/: color_translator.cpp  color_translator.h
libs/program_gui/basic_elements/UI_elements/my_sdl_button/: my_sdl_button.cpp  my_sdl_button.h
libs/program_gui/basic_elements/UI_elements/my_sdl_element/: my_sdl_element.cpp  my_sdl_element.h
libs/program_gui/basic_elements/UI_elements/my_sdl_fader/: my_sdl_fader.cpp  my_sdl_fader.h
libs/program_gui/basic_elements/basic_figures_draw/: basic_figures_draw.cpp  basic_figures_draw.h
libs/program_gui/basic_elements/my_sdl_button/: my_sdl_button.cpp  my_sdl_button.h
libs/program_gui/main_gui_logic/: program_gui.h
libs/program_logic/: app.cpp  app.h
libs/program_logic/global_data/: global_data.h
libs/program_logic/program_states/: program_states.cpp  program_states.h
libs/program_logic/program_states/states_logic/file_choose/: file_choose.h
src/: main.cpp
(+3 files in other folders)
